Fix invalid anchor structure

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="http:////netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 
     <title>Document</title>
@@ -56,13 +56,13 @@
                         <div class="col-03">
                             <h5 style="text-align: center">Formas de Pagamento</h5>
                             <div class="d-flex">
-                                <div> <a href="https://www.visa.com.br/"><img src="./imagens/visa.jpg" alt=""></div></a>
-                                <div> <a href="https://www.mastercard.com.br/pt-br.html"><img src="./imagens/master-card.jpg" alt=""></div></a>
-                                <div><a href="https://www.hipercard.com.br/"><img src="./imagens/hiper.jpg" alt=""></div></a>
-                                <div> <a href="https://www.elo.com.br/"><img src="./imagens/elo.jpg" alt=""></div></a>
+                                <div><a href="https://www.visa.com.br/"><img src="./imagens/visa.jpg" alt=""></a></div>
+                                <div><a href="https://www.mastercard.com.br/pt-br.html"><img src="./imagens/master-card.jpg" alt=""></a></div>
+                                <div><a href="https://www.hipercard.com.br/"><img src="./imagens/hiper.jpg" alt=""></a></div>
+                                <div><a href="https://www.elo.com.br/"><img src="./imagens/elo.jpg" alt=""></a></div>
                                 <div><img src="./imagens/boleto.jpg" alt=""></div>
-                                <div><a href="https://pagar.me/"><img src="./imagens/pagarme.jpg" alt=""></div></a>
-                                <div><a href="https://www.visa.com.br/"><img src="./imagens/elo.jpg" alt=""></div></a>
+                                <div><a href="https://pagar.me/"><img src="./imagens/pagarme.jpg" alt=""></a></div>
+                                <div><a href="https://www.visa.com.br/"><img src="./imagens/elo.jpg" alt=""></a></div>
                             </div>
                         </div>
                     </div>
@@ -108,9 +108,9 @@
 
                     <div class="d-flex">
                         <div class="box-image">
-                            <div><a href="https://www.siteblindado.com/consumidor/selo-blindado/?language1=pt&hostname=abmpecas.com"><img src="./imagens/seal.png" alt=""></div></a>
-                            <div><a href="https://transparencyreport.google.com/safe-browsing/search?url=abmpecas.com"><img src="./imagens/selo_google.png" alt=""></div></a>
-                            <div><img src="./imagens/selo_google.png" alt=""></div></a>
+                            <div><a href="https://www.siteblindado.com/consumidor/selo-blindado/?language1=pt&hostname=abmpecas.com"><img src="./imagens/seal.png" alt=""></a></div>
+                            <div><a href="https://transparencyreport.google.com/safe-browsing/search?url=abmpecas.com"><img src="./imagens/selo_google.png" alt=""></a></div>
+                            <div><img src="./imagens/selo_google.png" alt=""></div>
                         </div>      
                     </div>
                </div>
